REGRESSION(r228279): [GTK] Many aria tests are now flaky https://bugs.webkit.org/show_bug.cgi?id=182761

Reviewed by Adrian Perez de Castro.

Wait for notification changes ansynchronously instead of assuming they will
happen in the next run loop iteration.

* LayoutTests/accessibility/gtk/aria-busy-changed-notification-expected.txt:
* LayoutTests/accessibility/gtk/aria-busy-changed-notification.html:
* LayoutTests/accessibility/gtk/aria-current-changed-notification-expected.txt:
* LayoutTests/accessibility/gtk/aria-current-changed-notification.html:
* LayoutTests/accessibility/gtk/aria-disabled-changed-notification-expected.txt:
* LayoutTests/accessibility/gtk/aria-disabled-changed-notification.html:
* LayoutTests/accessibility/gtk/aria-expanded-changed-notification-expected.txt:
* LayoutTests/accessibility/gtk/aria-expanded-changed-notification.html:
* LayoutTests/accessibility/gtk/aria-pressed-changed-notification-expected.txt:
* LayoutTests/accessibility/gtk/aria-pressed-changed-notification.html:
* LayoutTests/accessibility/gtk/aria-readonly-changed-notification-expected.txt:
* LayoutTests/accessibility/gtk/aria-readonly-changed-notification.html:
* LayoutTests/accessibility/gtk/aria-required-changed-notification-expected.txt:
* LayoutTests/accessibility/gtk/aria-required-changed-notification.html:
* LayoutTests/platform/gtk/TestExpectations:
* Source/WebCore/accessibility/atspi/AXObjectCacheAtspi.cpp:
(WebCore::AXObjectCache::postPlatformNotification):

Canonical link: https://commits.webkit.org/263855@main